--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -1,7 +1,7 @@
 - title: Cardio Kickboxing
   description: A cardio martial arts workout based on Boxing, Kickboxing, Karate, Muay Thai, Capoeira, Jiu-Jitsu, and Thai Chi moves that may use hand pads, strike pads, and/or Muay Thai pads.
   icon: martial-arts
-  image: classes-9.jpg
+  image: cardio-kickboxing.jpg
   
 - title: Beginner Yoga
   description: A vinyasa style yoga for the beginner that connects the movement with the breath using basic yoga poses.
