--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -10,12 +10,12 @@
   
 - title: Advanced Weightlifting for Lean Muscle
   description: Multiple muscle group lifting to gain hypertrophy and muscle endurance for a lean muscle gain.
-  icon:
+  icon: gym
   image: advancedlifting.jpg
   
 - title: Barre
   description: A core class focusing on the lower body to improve strength, posture, flexibility, balance, stability, and muscle endurance.
-  icon:
+  icon: gym
   image: barre.jpg
   
 - title: Advanced Bootcamp
