--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -41,5 +41,5 @@
 - title: Vinyasa Flow
   description: Yoga focusing on breathing through a slow dynamic flow from one pose to another.
   icon: meditation
-  image: 
+  image: vinyasaflow.JPG
 
