--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -36,7 +36,7 @@
 - title: Old School Bootcamp
   description: Going back to the basics and using bodyweight and cardio training to enhance strength and weight loss.
   icon: gym
-  image: plankphoto.jpg
+  image: Plankphoto.jpg
   
 - title: Vinyasa Flow
   description: Yoga focusing on breathing through a slow dynamic flow from one pose to another.
