--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,6 +1,6 @@
-- name: Rebecca Klingenberg
+- name: Debbie Cannatella
   quote:
-  image: IMG_5664.JPG
+  image: 
 
 - name: Alexa Newton
   quote:
