removed " for Lean Muscle" from the title

--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -1,4 +1,4 @@
-- title: Advanced Weightlifting for Lean Muscle
+- title: Advanced Weightlifting
   description: Multiple muscle group lifting to gain hypertrophy and muscle endurance for a lean muscle gain.
   icon: gym
   image: advancedlifting.jpg
