--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -6,6 +6,6 @@
   quote:
   image: IMG_5663.JPG
 
-- name: Linda Ligas
+- name: Harley Hugenberg
   quote:
-  image: IMG_5666.png
+  image: Harley T
